@@ -1,6 +1,8 @@
 xine-ui (0.99.7) unstable; urgency=low
   (add entries here, newest at the top)
 
+  * Fix LIRC check so that it doesn't fail if liblircclient0.pc (which is
+    Debian-specific) is missing.
   * Recognise "authentication needed" messages from xine-lib 1.2.
   * Handle "file is empty" messages from xine-lib.
   * Add support for XINE_EVENT_MRL_REFERENCE_EXT.
